# bengal

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  pyproject.toml  pytest.ini
.cursor/rules/: python-compliance.mdc  python-efficiency.mdc  python-style.mdc
.github/: TESTING.md
.perles/: config.yaml
.windsurf/rules/: agent-context.md
benchmarks/: analyze_github_pages_results.py  benchmark_history.py  benchmark_render.py  calibrate_worker_thresholds.py  directive_cache_benchmark.py  directive_cache_real_site.py  lexer_benchmark.py  memory_profiler.py  profile_build_overhead.py  test_10k_site.py  test_analysis_performance.py  test_block_level_incremental.py  test_build.py  test_cache_performance.py  test_collections_performance.py  test_complexity_ordering.py  test_config_performance.py  test_contextvar_config.py  test_core_performance.py  test_directive_performance.py  test_github_pages_optimization.py  test_highlighting_performance.py  test_import_overhead.py  test_kida_comprehensive.py  test_kida_real_templates.py  test_kida_vs_jinja.py  test_patitas_memory.py  test_patitas_performance.py
bengal/: __init__.py  __main__.py
bengal/analysis/: content_intelligence.py
bengal/assets/: __init__.py  css_minifier.py  js_bundler.py  manifest.py  pipeline.py
bengal/autodoc/: __init__.py  base.py  config.py  docstring_parser.py  hashing.py  utils.py
bengal/cache/: __init__.py  asset_dependency_map.py  cache_store.py  cacheable.py  compression.py  content_hash_registry.py  generated_page_cache.py  page_discovery_cache.py  path_registry.py  query_index.py  query_index_registry.py  taxonomy_index.py  utils.py
bengal/cli/: __init__.py  base.py
bengal/collections/: loader.py  validator.py
bengal/config/: __init__.py  accessor.py  build_options_resolver.py  deprecation.py  directory_loader.py  env_overrides.py  hash.py  loader.py  loader_utils.py  merge.py  snapshot.py  types.py  unified_loader.py  url_policy.py  validation.py  validators.py
bengal/content/: __init__.py
bengal/content_types/: base.py  registry.py  strategies.py  templates.py
bengal/core/: __init__.py  author.py  cascade_engine.py  menu.py  nav_tree.py  registry.py  site_content.py  site_data.py  url_ownership.py  version.py
bengal/debug/: base.py  config_inspector.py  content_migrator.py  delta_analyzer.py  dependency_visualizer.py  explainer.py  incremental_debugger.py  reporter.py  shortcode_sandbox.py
bengal/directives/: _icons.py  admonitions.py  badge.py  base.py  build.py  button.py  cache.py  checklist.py  code_tabs.py  contracts.py  data_table.py  dropdown.py  embed.py  errors.py  example_label.py  factory.py  fenced.py  figure.py  gallery.py  glossary.py  icon.py  include.py  include_utils.py  list_table.py  literalinclude.py  marimo.py  navigation.py  options.py  steps.py  tabs.py  target.py  validator.py  versioning.py  video.py
bengal/effects/: block_diff.py  effect.py  render_integration.py
bengal/errors/: __init__.py  aggregation.py  codes.py  context.py  dev_server.py  display.py  exceptions.py  handlers.py  reporter.py  session.py  suggestions.py  types.py
bengal/fonts/: __init__.py  downloader.py
bengal/health/: base.py  health_check.py
bengal/icons/: resolver.py
bengal/orchestration/: asset.py  build_context.py  complexity.py  content.py  css_optimizer.py  feature_detector.py  menu.py  postprocess.py  related_posts.py  section.py  static.py  streaming.py  summary.py  taxonomy.py
bengal/output/: core.py  dev_server.py
bengal/parsing/: __init__.py  base.py
bengal/postprocess/: html_output.py  redirects.py  rss.py  sitemap.py  social_cards.py  special_pages.py  speculation.py  xref_index.py
bengal/protocols/: __init__.py  analysis.py  build.py  capabilities.py  core.py  rendering.py  stats.py
bengal/rendering/: __init__.py  api_doc_enhancer.py  asset_tracking.py  assets.py  block_cache.py  metadata.py  page_operations.py  renderer.py  template_profiler.py  template_tests.py
bengal/scaffolds/: base.py  registry.py
bengal/server/: build_executor.py  build_trigger.py  dev_server.py  file_watcher.py  live_reload.py  pid_manager.py  reload_controller.py  request_handler.py  request_logger.py  resource_manager.py  utils.py  watcher_runner.py
bengal/services/: data.py  query.py  theme.py  validation.py
bengal/snapshots/: builder.py  persistence.py  scheduler.py  scout.py  types.py
bengal/themes/: config.py  swizzle.py
bengal/utils/: autodoc.py  cache_registry.py
plan/: plan-section-protocol-migration.md  rfc-bengal-snapshot-engine.md  rfc-bengal-v2-architecture.md  rfc-build-system-package.md  rfc-incremental-build-contracts.md  rfc-incremental-build-dependency-gaps.md  rfc-patitas-extraction.md  rfc-protocol-consolidation.md  rfc-protocol-driven-typing.md  rfc-remaining-coupling-fixes.md
reports/: architecture-audit-2026-02-03.md  pytest-report.xml
scripts/: analyze_css_minifier_issues.py  analyze_file_sizes.py  benchmark_builds.py  benchmark_parallel.py  benchmark_rosettes_vs_pygments.py  benchmark_transforms.py  benchmark_zstd_cache.py  check_cycles.py  check_dependencies.py  check_file_sizes.py  check_global_state.py  check_template_css.py  check_threadpool_marker.py  clean_frontmatter.py  cleanup_rfcs.py  compare_css_minification.py  compare_parsers.py  convert_templates_to_kida.py  dep_graph_report.py  detect_code_smells.py  fix-css-nesting-simple.py  fix_docstring_indentation.py  fix_kida_mutation_patterns.py  fix_null_bytes.py  install_phosphor_icons.py  migrate_config_access.py  test_css_minification.py  test_css_syntax_validation.py  update_frontmatter.py
tests/: SKIPPED_TESTS_AUDIT.md  conftest.py  test_thread_safety.py
tests/_testing/: __init__.py  assertions.py  cli.py  cli_helpers.py  fixtures.py  guards.py  http.py  mocks.py  normalize.py  progress.py
tests/core/: test_image_processing.py  test_mixin_contracts.py  test_page_bundles.py  test_resource_contracts.py  test_type_safety.py
tests/dashboard/: __init__.py  conftest.py  test_dashboards.py  test_navigation.py  test_snapshots.py  test_widgets.py
(+924 files in other folders)
