[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[project]
name = "bengal"
version = "0.1.8"
description = "A high-performance static site generator with modular architecture"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Bengal Contributors", email = "lbeezr@icloud.com" }]
keywords = [
    "static-site-generator",
    "ssg",
    "documentation",
    "markdown",
    "website",
    "free-threading",
    "performance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1.7",
    "mistune>=3.0.0",                            # Used by directive plugin system (BengalDirective base class)
    "rosettes>=0.1.0",
    "kida-templates>=0.1.2",                   # Kida template engine (AST-native, free-threading ready)
    "patitas>=0.1.1",                          # Modern Markdown parser (CommonMark, free-threading ready)
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "jsmin>=3.0.1",
    "pillow>=10.0.0",                          # Image processing for social cards
    "psutil>=5.9.0",                           # For better process management in cleanup
    "textual>=0.96",                           # Interactive dashboards (Visual API requires >=0.96)
    "textual-serve>=0.1.0",                    # Web-based dashboard access
    "questionary>=2.0.0",                      # Interactive CLI prompts with arrow key navigation
    "watchfiles>=0.20",                        # Rust-based file watching for dev server (fast)
    "httpx>=0.27.0",                           # Async HTTP client for link checking
    "uvloop>=0.21.0; sys_platform != 'win32'", # Rust-based event loop (Linux/macOS)
    "packaging>=23.0",                         # Version parsing for upgrade checks
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
# Pre-built Lunr search index (faster client-side search)
search = ["lunr>=0.7.0"]

# Image processing (RFC: hugo-inspired-features)
# Note: Pillow is already a core dependency for social cards
# These extras add advanced image processing features
images = ["Pillow>=10.0"] # Already included, explicit for clarity
smartcrop = [
    "Pillow>=10.0",
    "smartcrop>=0.3",
] # Smart face/feature detection cropping
avif = ["Pillow>=10.0", "pillow-avif-plugin>=1.3"] # AVIF format output support
fast-images = ["pyvips>=2.2"] # libvips acceleration (advanced users)

# Content Layer - Remote content sources
# These provide async HTTP for fetching from GitHub, REST APIs, Notion, etc.
github = ["aiohttp>=3.9.0"]
notion = ["aiohttp>=3.9.0", "cachetools>=5.0.0"]      # cachetools for block caching
rest = ["aiohttp>=3.9.0"]
all-sources = ["aiohttp>=3.9.0", "cachetools>=5.0.0"] # All remote sources

# Note: Dev dependencies use [dependency-groups] (PEP 735) - install with: uv sync --group dev

[project.scripts]
bengal = "bengal.__main__:run"

[project.urls]
Homepage = "https://github.com/lbliii/bengal"
Documentation = "https://github.com/lbliii/bengal"
Repository = "https://github.com/lbliii/bengal"
"Bug Tracker" = "https://github.com/lbliii/bengal/issues"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
# Enable Python upgrade rules and other quality checks
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, variables, etc.)
    "UP",   # pyupgrade - Python modernization
    "B",    # flake8-bugbear - common bugs
    "SIM",  # flake8-simplify - simplify code
    "I",    # isort - import sorting
    "PIE",  # misc lints (unnecessary pass, duplicate dict keys, etc.)
    "PERF", # perflint - performance anti-patterns
    "C4",   # unnecessary comprehensions/list()/dict() calls
    "RUF",  # Ruff-specific (unused noqa, mutable class defaults, etc.)
    "PT",   # flake8-pytest-style - pytest best practices
]
ignore = [
    "E501",    # line too long - disabled
    "RUF001",  # ambiguous unicode in string (intentional × symbols)
    "RUF002",  # ambiguous unicode in docstring
    "RUF003",  # ambiguous unicode in comment
]

# Per-file ignore rules
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Allow unused imports in __init__ files
"tests/**/*.py" = ["S101"] # Allow assert in tests
"bengal/rendering/template_tests.py" = ["PT028"]  # Jinja test functions use test_ prefix (not pytest tests)
"bengal/rendering/template_functions/navigation/scaffold.py" = ["SIM118"]  # LRUCache.keys() returns list, not dict

# PT017: These tests verify "either success or graceful failure" - not a standard pytest.raises() pattern
# PT012/SIM117: These tests verify context manager exception handling - nested structure avoids PT012
"tests/integration/test_error_recovery.py" = ["PT017"]
"tests/integration/test_config_system_integration.py" = ["PT017"]
"tests/integration/warm_build/test_data_files.py" = ["PT017"]
"tests/unit/rendering/test_asset_manifest_contextvar.py" = ["PT012", "SIM117"]
"tests/unit/rendering/parsers/test_patitas/test_contextvar_config.py" = ["PT012", "SIM117"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["tests/roots/", "MagicMock/", "dist/", "build/"]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-forked>=1.6.0",           # Isolated test execution for stateful tests
    "pytest-textual-snapshot>=0.4.0", # Textual dashboard snapshot testing
    "hypothesis>=6.92.0",
    # Linting & Type Checking
    "ty>=0.0.11",   # Astral type checker (Rust-based, 10-100x faster than mypy)
    "ruff>=0.14.0", # 0.14+ required for Python 3.14 support
    # Test Utilities
    "beautifulsoup4>=4.12.0", # HTML validation in integration tests
    "markdown>=3.5.0",        # Optional python-markdown parser for tests
    "tomli-w>=1.0.0",
    "pytest-benchmark>=5.2.3",
    "radon>=6.0.1",
    "poethepoet>=0.35.0",
    "pyupgrade>=3.21.2",
    "vulture>=2.14",
    "pytest-randomly>=4.0.1",
    "pytest-repeat>=0.9.4",
    # UX improvements (auto-activate, see .github/TESTING.md for usage)
    "pytest-sugar>=1.1.1",         # Better progress bar, instant failure display
    "pytest-icdiff>=0.9",          # Side-by-side colored assertion diffs
    "pytest-subtests>=0.15.0", # lf() helper for fixtures in @parametrize
]

# =============================================================================
# Task Runner (poethepoet) - use: poe <task>
# =============================================================================
# Run `poe --help` to see all available tasks

[tool.poe.tasks]
# Development Server
serve = { cmd = "bengal site serve site", help = "Start development server for site/" }
dev = { cmd = "bengal serve", help = "Start dev server (auto-detects site)" }

# Building
build = { cmd = "bengal site build site", help = "Build the documentation site" }
build-prod = { cmd = "bengal build -e production", help = "Build with production config", cwd = "site" }

# Testing
# Note: -p no:sugar disables pytest-sugar to avoid fork segfaults on macOS with free-threading
test = { cmd = "pytest -p no:sugar", help = "Run full test suite" }
test-unit = { cmd = "pytest tests/unit/ -x -q", help = "Run unit tests only (fast)" }
test-integration = { cmd = "pytest tests/integration/ -x -q -p no:sugar", help = "Run integration tests" }
test-fast = { cmd = "pytest tests/ -x -q --ignore=tests/e2e --ignore=tests/integration", help = "Fast feedback loop (unit only)" }
test-cov = { cmd = "pytest tests/ --cov=bengal --cov-report=term-missing -p no:sugar", help = "Run tests with coverage" }
test-parallel = { cmd = "pytest tests/ -n auto -x -q -p no:sugar", help = "Run tests in parallel (pytest-xdist)" }
test-random = { cmd = "pytest tests/ -p randomly --randomly-seed=random -x -q -p no:sugar", help = "Run tests in random order" }
test-verbose = { cmd = "pytest tests/ -v --tb=long -p no:sugar", help = "Run tests with verbose output" }

# Type Checking
ty = { cmd = "ty check bengal/", help = "Run ty type checker (fast, Rust-based)" }
ty-strict = { cmd = "ty check bengal/ --error-on-warning", help = "Strict type checking (warnings as errors)" }

# Linting & Formatting
lint = { cmd = "ruff check .", help = "Run ruff linter" }
lint-fix = { cmd = "ruff check . --fix", help = "Run ruff linter with auto-fix" }
format = { cmd = "ruff format .", help = "Format code with ruff" }
format-check = { cmd = "ruff format . --check", help = "Check formatting without changing files" }

# Pre-commit
hooks = { cmd = "prek run --all-files", help = "Run all pre-commit hooks" }
hooks-install = { cmd = "prek install", help = "Install pre-commit hooks" }

# CI Pipeline (what CI runs)
ci = { sequence = ["lint", "ty", "test"], help = "Run full CI check (lint → type → test)" }
check = { sequence = ["lint", "format-check", "ty"], help = "Quick check (lint + format + types)" }

# Build & Release
dist = { shell = "rm -rf dist/ && uv build && ls -la dist/", help = "Build distribution packages" }
publish = { cmd = "uv publish", help = "Publish to PyPI" }
release = { sequence = ["dist", "publish"], help = "Build and publish in one step" }

# Code Quality Analysis
deadcode = { cmd = "ruff check . --select F401,F841 --statistics", help = "Find unused imports/variables" }
complexity = { cmd = "radon cc bengal/ -a -s", help = "Analyze code complexity" }

# Deploy Test (simulates GitHub Pages)
deploy-test.shell = """
cd site && bengal build -e production
echo ""
echo "Verifying CSS exists..."
ls -la public/assets/css/style.css || (echo "ERROR: CSS not found!" && exit 1)
echo ""
echo "Starting server at http://localhost:8000/bengal/"
echo "Press Ctrl+C to stop"
cd public && python3 -m http.server 8000
"""
deploy-test.help = "Build production & serve (simulates GitHub Pages)"

# Cleanup
poe-clean.shell = """
rm -rf dist build .pytest_cache .coverage htmlcov .ruff_cache .bengal public .ty_cache
find . -type d -name '__pycache__' -exec rm -rf {} + 2>/dev/null || true
"""
poe-clean.help = "Remove build artifacts and caches"

[tool.pytest.ini_options]
# Minimum pytest version required
minversion = "8.0"

# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["bengal", ".git", ".tox", "dist", "build", "*.egg", ".hypothesis", ".pytest_cache"]

# Strict mode: catch typos in markers, config errors, etc.
strict_markers = true
strict_config = true

# Async test support
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Pytest options (fast PR default: exclude long-running suites)
# --tb=short: concise tracebacks (shows file:line for each frame)
# -ra: show summary of all test outcomes (passed, failed, skipped, etc.)
# --durations=10: show 10 slowest tests
# --junitxml: output test results to XML for CI/parsing
# --strict-markers: fail on unknown markers (redundant with strict_markers but explicit)
# -n auto: parallel execution via pytest-xdist (each worker is fresh process)
# -p no:sugar: disable pytest-sugar to avoid fork segfaults on macOS with free-threading
#              (pytest-sugar initializes terminal state that corrupts on fork())
addopts = "-n auto -p no:sugar --tb=short -ra --durations=10 -m 'not performance and not stateful' --junitxml=reports/pytest-report.xml --strict-markers"

# Console output
console_output_style = "progress"

# Timeout configuration (prevent hanging tests)
# Note: 300s matches original project - integration tests need time for scaffolding/building
timeout = 300
timeout_method = "thread"

# Temporary directory retention (keep failed test dirs for debugging)
tmp_path_retention_count = 3
tmp_path_retention_policy = "failed"

# Warnings - treat deprecations as errors to catch issues early
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]

# Markers - all custom markers must be registered (strict_markers enforced)
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, multiple components)",
    "e2e: End-to-end tests (full workflows)",
    "cli: CLI command tests",
    "requires_network: Tests requiring internet access",
    "parallel_unsafe: Tests that cannot run in parallel with pytest-xdist (uses ThreadPoolExecutor/ProcessPoolExecutor internally, global state conflicts)",
    "memory_intensive: Tests using >500MB RAM",
    "hypothesis: Property-based tests using Hypothesis",
    "serial: tests that must run sequentially (no parallel, similar to parallel_unsafe)",
    "slow: Slow tests (long-running, typically >10s)",
    "performance: Performance/benchmark or high-scale tests (exclude by default)",
    "stateful: Long-running state-machine/workflow tests (exclude by default)",
]

[tool.coverage.run]
source = ["bengal"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
